<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <!-- plugins and dependencies vesions -->
    <!-- global -->
    <maven.plugin.version>3.10.1</maven.plugin.version>
    <java.version>17</java.version>
    <junit.version>5.9.0</junit.version>
    <javadoc.plugin.version>3.4.1</javadoc.plugin.version>
    <!-- core -->
    <gson.version>2.9.0</gson.version>
    <commons-io.version>2.11.0</commons-io.version>
    <commons-lang3.version>3.12.0</commons-lang3.version>
    <reflections.version>0.9.12</reflections.version>
    <!-- monitor -->
    <openjfx.version>18.0.2</openjfx.version>
    <!-- jovp -->
    <jovp.version>0.1.0-SNAPSHOT</jovp.version>
  </properties>

  <groupId>org.lei.opi</groupId>
  <artifactId>opi</artifactId>
  <packaging>pom</packaging>
  <version>0.2.0</version>
  <name>OPI project</name>
  <url>http://perimetry.org/opi</url>

  <modules>
    <module>core</module>
    <module>rgen</module>
    <module>monitor</module>
    <module>jovp</module>
  </modules>
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
          </configuration>
        </plugin>
    </plugins>
   </pluginManagement>
  </build>

  <dependencies>
      <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <dependency>
      <groupId>es.optocom.jovp</groupId>
      <artifactId>jovp</artifactId>
      <version>${jovp.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${javadoc.plugin.version}</version>
      </plugin>
    </plugins>
  </reporting>

  <developers>
    <developer>
      <id>imarinfr</id>
      <name>Ivan Marin-Franch</name>
      <email>imarinfr@optocom.es</email>
      <url>http://optocom.es</url>
      <organization>Computational Optometry</organization>
      <organizationUrl>http://optocom.es</organizationUrl>
      <roles>
        <role>creator</role>
        <role>author</role>
        <role>reviewer</role>
        <role>funder</role>
      </roles>
    </developer>
    <developer>
      <id>aturpin</id>
      <name>Andrew Turpin</name>
      <email>andrew.turpin@lei.org.au</email>
      <url>https://www.lei.org.au/research/scientists/dr-andrew-turpin</url>
      <organization>Lions Eye Institute</organization>
      <organizationUrl>https://www.lei.org.au/</organizationUrl>
      <roles>
        <role>creator</role>
        <role>author</role>
        <role>reviewer</role>
        <role>funder</role>
      </roles>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <!--TODO revise distribution management-->
  <distributionManagement>
    <repository>
      <uniqueVersion>true</uniqueVersion>
      <id>opi</id>
      <name>OPI project</name>
      <url>https://github.com/imarinfr/opi-server</url>
    </repository>
  </distributionManagement>

  <scm>
    <url>https://github.com/imarinfr/opi-server</url>
    <connection>scm:git:git://github.com/imarinfr/opi-server.git</connection>
    <tag>HEAD</tag>
  </scm>
</project>